# pjsk-i18n-study

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
frida/: README.md  device.py  run.py
frida/gadget/: README.md  connect.ps1  install.ps1  patch_apk.ps1
frida/lib/: font_inject.js  il2cpp_unity.js  offsets.js  runtime.js  story_patch.js
frida/scripts/: attach_probe.js  baseline.js  font.js  intercept.js  monitor.js  probe.js
i18n/: manifest.json
i18n-data/: sources.lock.json
i18n-data/fixtures/scenario/cn/: demo_talk.json
i18n-data/fixtures/scenario/jp/: demo_talk.json
i18n-data/font/: README.md
i18n-data/overrides/: ui.yaml
i18n-tools/: README.md  pyproject.toml
i18n-tools/font-bake-unity/: README.md  bake.ps1
i18n-tools/font-bake-unity/Assets/Editor/: PjskFontBake.cs
i18n-tools/font-bake-unity/ProjectSettings/: ProjectSettings.asset
i18n-tools/scripts/: scenario_abcache_download.py  scenario_from_bundles.py
i18n-tools/src/pjsk_i18n_data/: __init__.py  build.py  cli.py  fetch.py  font_chars.py  master.py  overrides.py  paths.py  sources.py  story.py  story_stats.py  text_normalize.py  validate.py
i18n/font/: charset-meta.json  charset.txt
i18n/reports/: gap-report.json  story-gap-report.json
i18n/story/: text.json
i18n/ui/: plain-text.json  wordings.json
notes/: README.md  bg.md  dual-subtitle.md  frida.md  hook-strategy.md  ida-verification.md  il2cpp-dump.md  il2cpp-hook-resolution.md  metadata.md  ref.md  story-pipeline.md  text-rendering.md  toolchain.md  version-migration-sop.md
