[project]
name = "pjsk-i18n-data"
version = "0.1.0"
description = "Fetch CN master wordings and build UI translation packs for PJSK JP client mod"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
pjsk-i18n = "pjsk_i18n_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pjsk_i18n_data"]